testsuite/tests/ghc-regress/typecheck/should_fail/tcfail173.hs
{-# OPTIONS -fglasgow-exts #-}

module ShouldFail where

newtype (f <.> g) a = Compose (f (g a))
